Add styles for mobileMenu

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -67,3 +67,21 @@
   border: 1px solid rgb(87, 87, 87);
 }
 
+.subel {
+  width: 150px!important;
+  height: 150px;
+}
+
+.scrollable {
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.scrollable-li {
+  overflow-x: scroll;
+  overflow-y: hidden;
+}
+
+.category {
+  font: bold 2em helvetica, Arial, sans-serif;
+}
